Change old validation logic to new one